# medpack_api

./: .env.example  .gitignore  README.rst  manage.py  pyproject.toml  requirements.txt  setup.cfg
.envs/.local/: .postgres
config/: api_router.py  asgi.py  celery_app.py  schema.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docs/: Makefile  conf.py  howto.rst  index.rst  make.bat  users.rst
docs/pycharm/: configuration.rst
medpack/: conftest.py
medpack/bagpack/: apps.py  models.py  utils.py
medpack/bagpack/api/: serializers.py  urls.py  views.py
medpack/bagpack/migrations/: 0001_initial.py  0002_bagpack_status.py  0003_alter_bagpackitem_bagpack.py  0004_alter_bagpackitem_quantity.py
medpack/orders/: admin.py  apps.py  models.py  utils.py
medpack/orders/api/: serializers.py  urls.py  views.py
medpack/orders/migrations/: 0001_initial.py  0002_auto_20210911_1820.py  0003_alter_order_created_at.py
medpack/products/: admin.py  apps.py  models.py  query.py  types.py
medpack/products/api/: serializers.py  urls.py  views.py
medpack/products/migrations/: 0001_initial.py  0002_auto_20210905_1629.py  0003_auto_20210905_1644.py  0004_product_status.py
medpack/products/tests/: factories.py
medpack/templates/: base.html
medpack/users/: admin.py  apps.py  models.py  urls.py
medpack/users/api/: serializers.py  urls.py  views.py
medpack/users/migrations/: 0002_alter_user_email.py  0003_userprofile.py
medpack/users/tests/: test_admin.py  test_drf_urls.py  test_drf_views.py  test_forms.py  (+4 more)
medpack/utils/: models.py
requirements/: base.txt  production.txt
(+2 files in other folders)
